<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Sign.LoginActivity">

    <FrameLayout
        android:id="@+id/frame_layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="#fff"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linear_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/login_to_continue"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <EditText

                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:autofillHints=""
                    android:background="@drawable/background_edit_text"
                    android:drawableStart="@drawable/ic_mail_outline"
                    android:drawablePadding="30dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#A9A8BC"
                    android:textCursorDrawable="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="25dp"
                    android:autofillHints=""
                    android:background="@drawable/background_edit_text"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="30dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#A9A8BC"
                    android:textCursorDrawable="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:text="@string/login_now"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/text_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="5dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="2dp"
                        android:text="@string/dont_you_have_account"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        tools:ignore="NestedWeights" />


                    <TextView
                        android:id="@+id/text_to_signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_toEndOf="@id/text_tv"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="start"
                        android:text="@string/register"
                        android:textColor="#63FF90"
                        android:textSize="18sp" />
                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_login"
                android:id="@+id/rel"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:paddingStart="0dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="4dp"
                    android:text="@string/forgot_password"
                    android:textColor="#63FF90"
                    android:textSize="16.5sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel"
                android:layout_marginLeft="38dp"
                android:layout_marginRight="38dp"
                android:background="@color/grey">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="14dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@color/black"
                    android:textSize="16.5sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:padding="8dp"
                    android:src="@drawable/google">

                </ImageView>

            </RelativeLayout>



        </RelativeLayout>



            />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>